# lyst-cli

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  sample-query.md
app/: agent.py  api.py  config.py  db.py  history.py  llm.py  main.py  prompts.py  state.py  tools.py
app/agent/: loop.py  prompts.py  stream.py  tools.py
app/db/: engine.py  schema.py
app/routes/: agent.py  config.py  schema.py  sessions.py
app/static/: index.html
lyst/: db.py  llm.py  main.py
tests/: test_api.py  test_config.py  test_history.py  test_llm.py
