[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lyst"
version = "0.1.0"
description = "Query your database using plain English via a web API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "litellm>=1.82.2",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.34.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
